upgrade to open telemetry and jakarta